# Xncut

./: .gitignore  CMakeLists.txt  COPYING  ProblemLogging.md  QA.md  README.md  README.md.raw.bak  Xncut.cpp  Xncut.h  XncutCodeLines.sh  main.cpp
Assets/: ClipHall.qrc  Index.qrc  Public.qrc  XncutClipHall.qrc  XncutEditor.qrc  XncutIcons.qrc  XncutPublic.qrc  XncutWelcome.qrc
Data/: RecentProjectList.json
Data/XncutEffect/XncutEffectList/: AudioEffectList.json  AudioTransitionsList.json  VideoEffectList.json  VideoTransitionsList.json
Data/XncutMenu/: TitleMenu.json
Data/XncutSetting/: XncutSetting.json
Doc/: CreativeDesign.md
Doc/RoutingArchitecture/: RoutingArchitecture.md
Md/: 1.1.TechnologySelection.md  1.WhyUseCorC++.md  10.IntrusiveDesign.md  11.BackgroundTask.md  2.OverviewPrinciples.md  3.DataMixed.md  4.AvSync.md  4.Pit.md  5.BriefDiscussionLogin.md  6.FormatSupport.md  7.PlayerElementDoubleMap.md  8.FourierTransform.md  9.EuclideanDistance.md
Src/: Main.c  Main.cpp  Xncut.cpp  Xncut.h
Src/XncutClipHall/: XncutClipHallWidget.cpp  XncutClipHallWidget.h  XncutUserInfoWidget.cpp  XncutUserInfoWidget.h
Src/XncutEditor/: XncutEditorWidget.cpp  XncutEditorWidget.h
Src/XncutEditor/XncutBins/: XncutBinsWidget.cpp  XncutBinsWidget.h
Src/XncutEditor/XncutBins/XncutMaterialField/: XncutMaterialFieldWidget.cpp  XncutMaterialFieldWidget.h
Src/XncutEditor/XncutInspector/: XncutInspectorWidget.cpp  XncutInspectorWidget.h  XncutProjectArgWidget.cpp  XncutProjectArgWidget.h
Src/XncutEditor/XncutProjectMonitor/: XncutProjectMonitorWidget.cpp  XncutProjectMonitorWidget.h  XncutVideoWidget.cpp  XncutVideoWidget.h
Src/XncutEditor/XncutTitleBar/: XncutTitleBarWidget.cpp  XncutTitleBarWidget.h
Src/XncutProjectManager/: XncutProjectCreateWidget.cpp  XncutProjectCreateWidget.h  XncutProjectManagerWidget.cpp  XncutProjectManagerWidget.h  XncutProjectModifyWidget.cpp  XncutProjectModifyWidget.h
Src/XncutPublicStyle/: XncutCustomTabStyle.cpp  XncutCustomTabStyle.h
Src/XncutPublicWidget/: XncutListView.cpp  XncutListView.h
Src/XncutWelcome/: XncutWelcomeScreen.cpp  XncutWelcomeScreen.h
Template/: XncutClassLayoutTemplate.h
Test/XncutAbstractTabItemView/: CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.h  XncutAbstractTabItemViewWidget.cpp  XncutAbstractTabItemViewWidget.h  XncutMyAssetsWidget.cpp  XncutMyAssetsWidget.h
Test/XncutPenTool/: CMakeLists.txt  README.md
Test/XncutPenTool/Test/: Points.json  Test.c  曲线拟合.c
Test/XncutPenTool/XncutPenTool/: Main.cpp  MainWindow.cpp  MainWindow.h
Test/XncutPenTool/XncutPenTool/XncutPenToolCoreWidget/: XncutPenToolWidget.cpp  XncutPenToolWidget.h  XncutPenToolWidget2.cpp  XncutPenToolWidget2.h  XncutPenToolWidget3.cpp  XncutPenToolWidget3.h
Test/XncutThreeLayerLayout/: CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.h  XncutThreeLayerLayoutWidget.cpp  XncutThreeLayerLayoutWidget.h
Test/XncutTitleBar/: CMakeLists.txt  LICENSE-MIT  Main.cpp  MainWindow.cpp  MainWindow.h  XncutTitleBarWidget.cpp  XncutTitleBarWidget.h
Translations/: CMakeLists.txt  PubgXncutMvp_zh_CN.ts
Xncut/: CMakeLists.txt  Main.cpp  Xncut.cpp  Xncut.h  XncutMain.cpp
Xncut/XncutClipHall/: XncutClipHallInfoWidget.cpp  XncutClipHallInfoWidget.h  XncutClipHallWidget.cpp  XncutClipHallWidget.h  XncutRecentProjectCardDelegate.cpp  XncutRecentProjectCardDelegate.h  XncutUserInfoWidget.cpp  XncutUserInfoWidget.h
Xncut/XncutCore/: XncutFunTool.cpp  XncutFunTool.h  XncutRunTimeContext.cpp  XncutRunTimeContext.h
Xncut/XncutPlugin/: XncutPluginManager.cpp  XncutPluginManager.h
Xncut/XncutProjectManager/: XncutProjectCardDelegate.cpp  XncutProjectCardDelegate.h  XncutProjectCreateWidget.cpp  XncutProjectCreateWidget.h  XncutProjectManagerWidget.cpp  XncutProjectManagerWidget.h  XncutProjectModifyWidget.cpp  XncutProjectModifyWidget.h
Xncut/XncutPublicWidget/: XncutListView.cpp  XncutListView.h  XncutSwitchButton.cpp  XncutSwitchButton.h
Xncut/XncutWelcome/: XncutBootloader.cpp  XncutBootloader.h  XncutWelcomeScreen.cpp  XncutWelcomeScreen.h
XncutCores/: CMakeLists.txt
XncutCores/XncutCore/: CMakeLists.txt  XncutGlobalConfig.cpp  XncutGlobalConfig.h
XncutCores/XncutCore/XncutPluginFramework/: XncutAbstractPlugin.cpp  XncutAbstractPlugin.h
XncutCores/XncutWidgets/: CMakeLists.txt  XncutCardWidget.cpp  XncutCardWidget.h
XncutMvp/: PubgXncutMvp.cpp  PubgXncutMvp.h  main.cpp
src/: CMakeLists.txt
