#
# @Author: xixi_
# @Date: 2026-06-03 17:32:15
# @LastEditors: xixi_
# @LastEditTime: 2026-06-03 17:32:17
# @FilePath: /Xncut/CMakeLists.txt
# Copyright (c) 2020-2026 by xixi_ , All Rights Reserved.
#

cmake_minimum_required(VERSION 3.19)
project(Xncut VERSION 0.0.1 DESCRIPTION "NEL剪辑软件" LANGUAGES CXX)

# 主程序
add_subdirectory(Xncut)
